--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bacán: Peruvian Cuisine!!</title>
+	<title>Bacán: Peruvian Cuisine!!!</title>
 		 <meta name="description" content="why is this important? dog car website awesome. Hey Search engine!!! pick me look look at me!!" />
         <meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript">
         <meta name="author" content="anonymous myind your business " />
